// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleDatePicker dark should render 1`] = `
<div
  className="sc-AxhCb OHmOC"
>
  <div
    className="sc-AxiKw ixAZyM"
    fontFamily="openSans"
    size="normal"
  >
    <div
      className="SingleDatePicker SingleDatePicker_1"
    >
      <div>
        <div
          className="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2"
        >
          <button
            className="SingleDatePickerInput_calendarIcon SingleDatePickerInput_calendarIcon_1"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="sc-AxhUy eNHrrB sc-AxjAm jWlVxK lni lni-calendar"
            />
          </button>
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-test-single-datepicker"
              aria-label="Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="test-single-datepicker"
              name="test-single-datepicker"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Date"
              readOnly={false}
              required={false}
              type="text"
              value="19.06.2020"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-test-single-datepicker"
            >
              Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SingleDatePicker dark should render with custom date format 1`] = `
<div
  className="sc-AxhCb OHmOC"
>
  <div
    className="sc-AxiKw ixAZyM"
    fontFamily="openSans"
    size="normal"
  >
    <div
      className="SingleDatePicker SingleDatePicker_1"
    >
      <div>
        <div
          className="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2"
        >
          <button
            className="SingleDatePickerInput_calendarIcon SingleDatePickerInput_calendarIcon_1"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="sc-AxhUy eNHrrB sc-AxjAm jWlVxK lni lni-calendar"
            />
          </button>
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-test-format-single-datepicker"
              aria-label="Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="test-format-single-datepicker"
              name="test-format-single-datepicker"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Date"
              readOnly={false}
              required={false}
              type="text"
              value="06/19/2020"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-test-format-single-datepicker"
            >
              Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SingleDatePicker dark should render with two months shown 1`] = `
<div
  className="sc-AxhCb OHmOC"
>
  <div
    className="sc-AxiKw ixAZyM"
    fontFamily="openSans"
    size="normal"
  >
    <div
      className="SingleDatePicker SingleDatePicker_1"
    >
      <div>
        <div
          className="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2"
        >
          <button
            className="SingleDatePickerInput_calendarIcon SingleDatePickerInput_calendarIcon_1"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="sc-AxhUy eNHrrB sc-AxjAm jWlVxK lni lni-calendar"
            />
          </button>
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-test-months-single-datepicker"
              aria-label="Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="test-months-single-datepicker"
              name="test-months-single-datepicker"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Date"
              readOnly={false}
              required={false}
              type="text"
              value="19.06.2020"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-test-months-single-datepicker"
            >
              Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SingleDatePicker light should render 1`] = `
<div
  className="sc-AxhCb gYQMWN"
>
  <div
    className="sc-AxiKw ixAZyM"
    fontFamily="openSans"
    size="normal"
  >
    <div
      className="SingleDatePicker SingleDatePicker_1"
    >
      <div>
        <div
          className="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2"
        >
          <button
            className="SingleDatePickerInput_calendarIcon SingleDatePickerInput_calendarIcon_1"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="sc-AxhUy eNHrrB sc-AxjAm jWlVxK lni lni-calendar"
            />
          </button>
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-test-single-datepicker"
              aria-label="Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="test-single-datepicker"
              name="test-single-datepicker"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Date"
              readOnly={false}
              required={false}
              type="text"
              value="19.06.2020"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-test-single-datepicker"
            >
              Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SingleDatePicker light should render with custom date format 1`] = `
<div
  className="sc-AxhCb gYQMWN"
>
  <div
    className="sc-AxiKw ixAZyM"
    fontFamily="openSans"
    size="normal"
  >
    <div
      className="SingleDatePicker SingleDatePicker_1"
    >
      <div>
        <div
          className="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2"
        >
          <button
            className="SingleDatePickerInput_calendarIcon SingleDatePickerInput_calendarIcon_1"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="sc-AxhUy eNHrrB sc-AxjAm jWlVxK lni lni-calendar"
            />
          </button>
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-test-format-single-datepicker"
              aria-label="Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="test-format-single-datepicker"
              name="test-format-single-datepicker"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Date"
              readOnly={false}
              required={false}
              type="text"
              value="06/19/2020"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-test-format-single-datepicker"
            >
              Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SingleDatePicker light should render with two months shown 1`] = `
<div
  className="sc-AxhCb gYQMWN"
>
  <div
    className="sc-AxiKw ixAZyM"
    fontFamily="openSans"
    size="normal"
  >
    <div
      className="SingleDatePicker SingleDatePicker_1"
    >
      <div>
        <div
          className="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2"
        >
          <button
            className="SingleDatePickerInput_calendarIcon SingleDatePickerInput_calendarIcon_1"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="sc-AxhUy eNHrrB sc-AxjAm jWlVxK lni lni-calendar"
            />
          </button>
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-test-months-single-datepicker"
              aria-label="Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="test-months-single-datepicker"
              name="test-months-single-datepicker"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Date"
              readOnly={false}
              required={false}
              type="text"
              value="19.06.2020"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-test-months-single-datepicker"
            >
              Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SingleDatePicker with given date should render with given startDate 1`] = `
<div
  className="sc-AxhCb gYQMWN"
>
  <div
    className="sc-AxiKw ixAZyM"
    fontFamily="openSans"
    size="normal"
  >
    <div
      className="SingleDatePicker SingleDatePicker_1"
    >
      <div>
        <div
          className="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2"
        >
          <button
            className="SingleDatePickerInput_calendarIcon SingleDatePickerInput_calendarIcon_1"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="sc-AxhUy eNHrrB sc-AxjAm jWlVxK lni lni-calendar"
            />
          </button>
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-test-date-single-datepicker"
              aria-label="Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="test-date-single-datepicker"
              name="test-date-single-datepicker"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Date"
              readOnly={false}
              required={false}
              type="text"
              value="19.06.2020"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-test-date-single-datepicker"
            >
              Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SingleDatePicker with given date should render with given startDate 2`] = `
<div
  className="sc-AxhCb OHmOC"
>
  <div
    className="sc-AxiKw ixAZyM"
    fontFamily="openSans"
    size="normal"
  >
    <div
      className="SingleDatePicker SingleDatePicker_1"
    >
      <div>
        <div
          className="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2"
        >
          <button
            className="SingleDatePickerInput_calendarIcon SingleDatePickerInput_calendarIcon_1"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="sc-AxhUy eNHrrB sc-AxjAm jWlVxK lni lni-calendar"
            />
          </button>
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-test-date-single-datepicker"
              aria-label="Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="test-date-single-datepicker"
              name="test-date-single-datepicker"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Date"
              readOnly={false}
              required={false}
              type="text"
              value="19.06.2020"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-test-date-single-datepicker"
            >
              Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
